# bond

./: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
src/: App.tsx  index.css
src/api/: weillchain-token.ts
src/components/layout/: DashboardLayout.tsx  DashboardNav.tsx
src/components/ui/: AdminNotificationBell.tsx  NotificationBell.tsx  aartha-chatbot.tsx  animated-counter.tsx  bond-card.tsx  glow-card.tsx  gradient-button.tsx  grid-background.tsx  oracle-verification-badge.tsx  stat-card.tsx  transaction-item.tsx
src/context/: BondContext.tsx
src/data/: dummyData.ts
src/hooks/: useWeilChain.ts
src/lib/: bondPricing.ts  bondfi-compliance.ts  oracleHelpers.ts  oracleService.ts  termsAndConditions.ts  userStorage.ts  weilchain.ts
src/pages/: AccountPending.tsx  HackathonDemo.tsx  Landing.tsx  Login.tsx  Splash.tsx
src/pages/admin/: AdminAllUsers.tsx  AdminBondAnalytics.tsx  AdminDashboard.tsx  AdminLogin.tsx  AdminPendingBonds.tsx  AdminPendingUsers.tsx  AdminTokenAnalytics.tsx
src/pages/broker/: BrokerCreateListing.tsx  BrokerDashboard.tsx  BrokerDemand.tsx  BrokerInvestors.tsx  BrokerListedBonds.tsx  BrokerProfile.tsx  BrokerSettings.tsx  BrokerSupport.tsx  BrokerWallet.tsx
src/pages/custodian/: CustodianDashboard.tsx
src/pages/fi/: FIDashboard.tsx
src/pages/gov/: GovDashboard.tsx
src/pages/investor/: InvestorBonds.tsx  InvestorCalculator.tsx  InvestorDashboard.tsx  InvestorPortfolio.tsx  InvestorSecondaryMarket.tsx  (+4 more)
src/types/: bond.ts
weilliptic/: Cargo.toml  README.md  bondfi.widl
weilliptic/src/: lib.rs
